[metadata]
name = snsim
author = Bastien Carreres
author_email = carreres@cppm.in2p3.fr
description = Package to simulate SN survey, using sncosmo SN simulation package
long_description = file : README.md
license = BSD-3-Clause

[options]
packages =
    snsim
python_requires = >=3.7, <4
install_requires = 
    pandas >= 1.2.0
    geopandas >= 0.12.2
    sncosmo >= 2.5.0
    numpy >= 1.13.3
    astropy >= 5.1.0
    shapely >= 1.8.0
    numba >= 0.56
    dask >= 2023
    sfdmap2
    pyarrow
    matplotlib
    scipy
    pyyaml
    requests
    rtree

[options.extras_require]
docs =
    markdown
    sphinx >= 5.2.3
    sphinx-markdown-tables >= 0.0.15
    numpydoc
    furo
    myst-parser
    sphinx-copybutton
    sphinx-design
    sphinx-inline-tabs
    sphinx-tabs
